syntax = "proto3";

service Statistics {
    rpc RetrieveBookings (RetrieveBookingsRequest) returns (RetrieveBookingsResponse) {}
}

message RetrieveBookingsRequest {
    string UserId = 1;
}

message RetrieveBookingsResponse {
    message Booking {
        int64 CreatedAt = 1;
        string VehicleId = 2;
        float AmountPaid = 3;
        uint32 DistanceDriven = 4;
        uint32 TimeDriven = 5;
    }
    repeated Booking bookings = 1;
}
